# Proyecto_EDatos_1

./: README.md
Analizador_de_texto/: CMakeLists.txt  main.cpp
Analizador_de_texto/Helpers/: Delimiters.h  IsPrefix.h  OptionMenu.h  Round.h  StringUtils.h
Analizador_de_texto/InputFile/: file1.txt
Analizador_de_texto/Structures/CharList/: CharList.cpp  CharList.h  CharNode.cpp  CharNode.h
Analizador_de_texto/Structures/Lista/: DoublyList.cpp  DoublyList.h  NodeList.cpp  NodeList.h
Analizador_de_texto/Structures/Trie/: Trie.cpp  Trie.h
Analizador_de_texto/Structures/WordList/: PositionNode.cpp  PositionNode.h  WordList.cpp  WordList.h  WordNode.cpp  WordNode.h
